# DX11-OpenCV

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build_verify.py  check_dll.py  config.json  debug_import.py  debug_imports.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_webcam_dx11.py  utils.py
.github/workflows/: build.yml  publish.yml  python-package.yml  python-publish.yml
docs/: DEVELOPER_MANUAL.md  USER_MANUAL.md
dx11_renderer/: __init__.py  _core.cp312-win_amd64.pyd  _core.pyd
dx11_renderer/core/: __init__.py
include/: dx11_renderer.h
src/: dx11_renderer.cpp  python_bindings.cpp
tests/: test_dx11_basic.py  test_dx11_deps.py  test_dx11_renderer.py  test_opencv_dx11.py  test_video_dx11.py  test_webcam_dx11.py  test_yolo_dx11.py
