[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel>=0.40.0",
    "pybind11>=2.10.0",
    "cmake>=3.15",
    "ninja",
    "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "dx11_renderer"
version = "1.0.0"
description = "DirectX 11 accelerated image processing for real-time video"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    {name = "M. Bilal Maulida", email = "relay.arbiter303@gmail.com"}
]
dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.setuptools]
packages = ["dx11_renderer"]
