[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel>=0.40.0",
    "pybind11>=2.10.0",
    "cmake>=3.15",
    "ninja",
    "opencv-python>=4.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "dx11_renderer"
dynamic = ["version"]
description = "DirectX 11 Renderer with OpenCV Integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy",
    "opencv-python>=4.0.0",
    "pybind11>=2.10.0"
]

[tool.setuptools]
packages = ["dx11_renderer"]
include-package-data = true
package-dir = { "dx11_renderer" = "dx11_renderer" }
