[metadata]
name = dx11_renderer
version = 1.0.0
summary = DirectX 11 accelerated image processing for Python
author = Muhammad Bilal Maulida
author_email = relay.arbiter303@gmail.com
license = MIT

[options]
packages = find:
zip_safe = False
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    opencv-python>=4.5.0

[options.package_data]
dx11_renderer = 
    *.dll
    *.pyd